# async-rust-ffi-runtimes

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md
cmd/cppclient/: .clang-format  README.md  Runtime.cpp  go  http.cpp  main.cpp  meson.build  mylib.cpp
cmd/cppclient/include/: AsyncFuture.hpp  Drop.hpp  Runtime.hpp  http.hpp  mylib.hpp
cmd/cppclient/include/ffi/: future.h
cmd/rsclient/: Cargo.toml  README.md
cmd/rsclient/src/: main.rs
githooks/: Makefile  pre-commit
mylib/: Cargo.toml
mylib/src/: lib.rs
mylibffi/: Cargo.toml
mylibffi/src/: lib.rs
